[tool.poetry]
name = "wait-for-utils"
version = "0.1.0"
description = ""
authors = ["Dmitry <mtizima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.5.1"

[tool.poetry.scripts]
wait_for_postgres = "wait_for_utils.run:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
